<resources>
    <string name="app_name">DemoImagesConveter</string>
    <string name="open_video_gallery">Open Video Gallery</string>
    <string name="gallery">Gallery</string>
    <string name="video_name">video name</string>
    <string name="_00_05">00:05</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="QuickCapture">Quick Capture</string>
    <string name="Automatically">automaticaally</string>
    <string name="name">name</string>
    <string name="ic_folder">ic_folder</string>
    <string name="choose_video_folder">Choose Video Folder</string>
    <string name="title_activity_choose_video">ChooseVideoActivity</string>

    <string name="hello_world">Hello Square World!</string>
    <string name="choose_video">Choose Video</string>
    <string name="demo_duration">00:05</string>
    <string name="title">title</string>
    <string name="capture_images_from_video">Capture Images</string>
    <string name="slide_show">Making slideshow</string>
    <string name="setting">Setting</string>
    <string name="file_format">File Format</string>
    <string name="JPG">JPEG</string>
    <string name="high">High</string>
    <string name="Quality">Quality</string>
    <string name="Size">Size</string>
    <string name="_1x">1x</string>
    <string name="PNG">PNG</string>
    <string name="save">save</string>
    <string name="Best">Best</string>
    <string name="very_high">Very High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="_0_5x">0.5x</string>
    <string name="_1_5x">1.5x</string>
    <string name="_2x">2x</string>
    <string name="_3x">3x</string>
    <string name="_00_00">00:00</string>
    <string name="pause_and_play_button">Pause and Play Button</string>
    <string name="take_photo">Take Photo</string>
    <string name="your_capptured_photo">Your Capptured Photo</string>
    <string name="choose_images">Choose Images</string>
    <string name="images">Images</string>
    <string name="add_images">Add Images</string>
    <string name="sldie_sec">Sldie/sec</string>
    <string name="enter_duration">Enter Duration</string>
    <string name="sec_per_image">Sec/Image</string>
    <string name="_2">2</string>
    <string name="add_music">Add music</string>
    <string name="progressing_please_wait">Progressing.Please Wait</string>
    <string name="title_activity_add_audioctivity">AddAudioctivity</string>
    <string name="add_audio">Add Audio</string>
    <string name="back_to_slideshow_to_add_music">back to slideshow to add music</string>
    <string name="edit_image">Edit Image</string>
    <string name="information">Information</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="dir">dir</string>
    <string name="open_more_option">Open More Option</string>
    <string name="Remane">Rename</string>
    <string name="do_you_want_to_delete_this">Do you want to delete this ?</string>
    <string name="todo">TODO</string>
    <string name="crop">Crop</string>
    <string name="back">Back</string>
    <string name="crop_image">Crop Image</string>
    <string name="do_you_want_to_save_this">Do you want to save this?</string>
    <string name="text">Text</string>
    <string name="done">Done</string>
    <string name="brush">Brush</string>
    <string name="sticker">Sticker</string>
    <string name="opacity">Opacity</string>
</resources>