<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imv_setting_back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_back"
                    android:layout_centerVertical="true">
                </ImageView>
                <TextView
                    android:layout_toEndOf="@id/imv_setting_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/setting"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp">
                </TextView>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_setting_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_format"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:layout_alignParentEnd="true"
            android:id="@+id/tv_setting_file_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/JPG"
            android:textColor="@color/blue_1"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_setting_first"
            android:id="@+id/tv_setting_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Quality"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:id="@+id/tv_setting_quality"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_setting_file_format"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:textColor="@color/blue_1"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_setting_second"
            android:id="@+id/tv_setting_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Size"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:id="@+id/tv_setting_size"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_setting_quality"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1x"
            android:textColor="@color/blue_1"
            android:textSize="20sp">
        </TextView>

    </RelativeLayout>
</LinearLayout>