<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quality"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_margin="20dp">
    </TextView>
    <RadioGroup
        android:id="@+id/rg_quality_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_best"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Best"
            android:textSize="20sp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"
            android:textColor="@color/blue_1"
            android:buttonTint="@color/blue_1">
        </RadioButton>
        <RadioButton
            android:id="@+id/rb_very_high"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_high"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:textColor="@color/blue_1"
            android:buttonTint="@color/blue_1"
            tools:ignore="RtlSymmetry">
        </RadioButton>
        <RadioButton
            android:id="@+id/rb_high"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:textColor="@color/blue_1"
            android:buttonTint="@color/blue_1"
            tools:ignore="RtlSymmetry">
        </RadioButton>
        <RadioButton
            android:id="@+id/rb_medium"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:textColor="@color/blue_1"
            android:buttonTint="@color/blue_1"
            tools:ignore="RtlSymmetry">
        </RadioButton>
        <RadioButton
            android:id="@+id/rb_low"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:textColor="@color/blue_1"
            android:buttonTint="@color/blue_1"
            tools:ignore="RtlSymmetry">
        </RadioButton>
    </RadioGroup>
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/imv_dialog_quality_check"
            android:src="@drawable/ic_check"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:elevation="2dp">
        </ImageView>
        <ImageView
            android:id="@+id/imv_dialog_quality_close"
            android:src="@drawable/ic_close"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:elevation="2dp">
        </ImageView>
    </LinearLayout>
</LinearLayout>