<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ab_slide_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imv_add_audio_back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_back"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/back_to_slideshow_to_add_music">
                </ImageView>
                <TextView
                    android:layout_toEndOf="@id/imv_add_audio_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/add_audio"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp">
                </TextView>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/ab_slide_show"
        android:id="@+id/rv_add_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_add_audio_slideshow_lenghth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
        </TextView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_add_audio_min_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00">
            </TextView>
            <TextView
                android:layout_alignParentEnd="true"
                android:id="@+id/tv_add_audio_max_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_05">
            </TextView>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>