<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_duration"
        android:textColor="@color/blue_2"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal">
    </TextView>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edt_dialog_slide_per_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/_2">
        </EditText>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/sec_per_image"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center_vertical">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/imv_dialog_sldie_per_sec_check"
            android:src="@drawable/ic_check"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:elevation="2dp">
        </ImageView>
        <ImageView
            android:id="@+id/imv_dialog_sldie_per_sec_cancel"
            android:src="@drawable/ic_close"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:elevation="2dp">
        </ImageView>
    </LinearLayout>
</LinearLayout>