<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/fr_videoview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <VideoView
            android:layout_gravity="center_horizontal"
            android:id="@+id/vv_quick_captured_video"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="180dp">
        </VideoView>
        <ImageView
            android:id="@+id/imv_quick_capture_play"
            android:layout_gravity="center"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/pause_and_play_button">
        </ImageView>
    </FrameLayout>
    <TextView
        android:id="@+id/tv_capture_image_title"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black">
    </TextView>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_quick_cap_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textColor="@color/black">
        </TextView>
        <SeekBar
            android:id="@+id/sb_quick_capture"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progressTint="@color/blue_2"
            android:thumbTint="@color/blue_2">
        </SeekBar>
        <TextView
            android:id="@+id/tv_quick_capture_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_quick_capture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:fabCustomSize="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_take_photo"
            app:backgroundTint="@color/blue_2"
            android:contentDescription="@string/take_photo"
            app:tint="@color/white">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_quick_save"
            android:layout_marginStart="50dp"
            android:layout_toEndOf="@id/fab_quick_capture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:fabCustomSize="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_save"
            app:backgroundTint="@color/blue_2"
            android:contentDescription="@string/take_photo"
            app:tint="@color/white">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/your_capptured_photo"
        android:textColor="@color/black"
        android:textSize="16sp">
    </TextView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_quick_capture_images"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>