<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ab_slide_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imv_slide_show_back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_back"
                    android:layout_centerVertical="true">
                </ImageView>
                <TextView
                    android:layout_toEndOf="@id/imv_slide_show_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/slide_show"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/save"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp">
                </TextView>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:id="@+id/fr_slide_show_video"
        android:layout_below="@id/ab_slide_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <VideoView
            android:id="@+id/vv_made_slide_show"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="180dp">
        </VideoView>
    </FrameLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_slide_show_create"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fr_slide_show_video"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:fabCustomSize="50dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_save"
        app:backgroundTint="@color/blue_2"
        android:contentDescription="@string/take_photo"
        app:tint="@color/white">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>
    <LinearLayout
        android:elevation="2dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <TextView
            android:id="@+id/tv_slide_show_add_iamges"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_images"
            app:drawableTopCompat="@drawable/ic_add_image"
            android:gravity="center_horizontal"
            android:drawablePadding="2dp"
            android:textColor="@color/blue_2"
            android:paddingBottom="10dp">
        </TextView>
        <TextView
            android:id="@+id/tv_slide_show_slides_per_second"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sldie_sec"
            app:drawableTopCompat="@drawable/ic_slide_per_second"
            android:gravity="center_horizontal"
            android:drawablePadding="2dp"
            android:textColor="@color/blue_2"
            android:paddingBottom="10dp">
        </TextView>
        <TextView
            android:id="@+id/tv_slide_show_add_audio"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sldie_sec"
            app:drawableTopCompat="@drawable/ic_add_music"
            android:gravity="center_horizontal"
            android:drawablePadding="2dp"
            android:textColor="@color/blue_2"
            android:paddingBottom="10dp">
        </TextView>

    </LinearLayout>
</RelativeLayout>